implement ability to get next raw positions for the piece